# fidowinter

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  fidowinter.py  mail.py  pyproject.toml  test.txt
.github/workflows/: codeql-analysis.yml
